Date	Added

02/05
        * optimizing OnTouch event name generation [Shinomori]
        * fixing Celests Sharp Shooting [Shinomori]
        * Updated Sharp Shooting AoE code, thanks to Neodis / k-Athena [celest]
          - Update: Adapt jA's path_search algorithm and removed the need of struct
            'dev' in map_session_data
          - Update: Increase range to 14
        * Tidied up explicit typecasts in status_get_max_hp, thanks to Ilpalazzo-sama
          [celest]
        * Non-MVP / miniboss summoned monsters should give exp, my mistake ^^; [celest]
          Note:- minibosses are considered a 'Boss' as well, not just MVP's
        * Fixed a typo that was preventing packet version 5 clients (628sak) from
          logging in (it was supposed to only block those with 4 or below) [celest]

02/04
        * Fixed more compile signed/unsigned errors [SVN 1040: MouseJstr]
	* TXT convertors now read the import command in inter_athena.conf
	  [SVN 1038: Ajarn]
        * Fixed some compile errors [SVN 1037: MouseJstr]
	* Added common/buffer.(c/h) [SVN 1033: Ajarn]
	* Login server can now set it's ip address in the config [SVN 1033: Ajarn]
	* Servers now bind to a single ip address, thus allowing multiple servers to
	  a single port [SVN 1033: Ajarn]
        * Added experimental code to generate a stack dump when it segfaults, thanks
          to Ser [celest]
          - does not work with Cygwin, as it does not have glibc
          - to enable, edit the Makefile and remove the # on the line:

                # OPT += -DDUMPSTACK -rdynamic

          - What it does: everytime eA crashes it'll generate a file "stackdump_
            <number>.txt" in your save folder with a backtrace, which you can
            examine and send to a dev to be fixed.

        * Some more tidying up in status_get_ functions [celest]

02/03
        * When loading shop scripts automatically check if the prices can be exploited
          with OC/DC [celest]