@@ -18,6 +18,10 @@ wisp_server_name: Server
 //
 // login_ip:127.0.0.1
 
+// What interface should we bind to.. if you have multiple IP's on one
+// machine,  this lets you put multiple servers on the same ports
+// bind_ip:127.0.0.1
+
 // Login Server Port
 login_port: 6900
 
